# vlc-bittorrent-crossplatform

./: CMakeLists.txt  README.md  install_debian.sh  install_macos.sh  install_windows.ps1
scripts/: build-libtorrent
src/: CMakeLists.txt  data.cpp  download.cpp  download.h  interface.cpp  interface.h  magnetmetadata.cpp  metadata.cpp  module.cpp  overlay.cpp  overlay.h  session.cpp  session.h  vlc.cpp  vlc.h
